--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@
     scroll-behavior: smooth;
 }
 
+html {
+    scroll-padding-top: 30px;
+}
+
 body {
     background-color: var(--bg-color);
     color: var(--text-color);
